--- a/index.html
+++ b/index.html
@@ -20,29 +20,57 @@
   </head>
   <body>
     <main class="main-container">
-      <div class="images">
-        <div class="bg-pattern">
-          <img src="./images/bg-pattern-desktop.svg" alt="" />
-        </div>
-        <div class="woman">
-          <img src="./images/illustration-woman-online-desktop.svg" alt="" />
-        </div>
-      </div>
-      <div class="box">
-        <img src="./images/illustration-box-desktop.svg" alt="" />
-      </div>
+      <section class="images">
+        <img id="bg-pattern" src="./images/bg-pattern-desktop.svg" alt="" />
+        <img
+          id="woman"
+          src="./images/illustration-woman-online-desktop.svg"
+          alt=""
+        />
+      </section>
+      <section class="faq">
+        <h1>FAQ</h1>
+        <ul>
+          <li>
+            <p class="question">How many team members can I invite?</p>
+            <p class="answer">
+              You can invite up to 2 additional users on the Free plan. There is
+              no limit on team members for the Premium plan.
+            </p>
+          </li>
+          <li>
+            <p class="question">What is the maximum file upload size?</p>
+            <p class="answer">
+              No more than 2GB. All files in your account must fit your allotted
+              storage space.
+            </p>
+          </li>
+          <li>
+            <p class="question">How do I reset my password?</p>
+            <p class="answer">
+              Click “Forgot password” from the login page or “Change password”
+              from your profile page. A reset link will be emailed to you.
+            </p>
+          </li>
+
+          <li>
+            <p class="question">Can I cancel my subscription?</p>
+            <p class="answer">
+              Yes! Send us a message and we’ll process your request no questions
+              asked.
+            </p>
+          </li>
+
+          <li>
+            <p class="question">Do you provide additional support?</p>
+            <p class="answer">
+              Chat and email support is available 24/7. Phone lines are open
+              during normal business hours.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
-
-    <!-- How many team members can I invite? You can invite up to 2 additional users
-    on the Free plan. There is no limit on team members for the Premium plan.
-    What is the maximum file upload size? No more than 2GB. All files in your
-    account must fit your allotted storage space. How do I reset my password?
-    Click “Forgot password” from the login page or “Change password” from your
-    profile page. A reset link will be emailed to you. Can I cancel my
-    subscription? Yes! Send us a message and we’ll process your request no
-    questions asked. Do you provide additional support? Chat and email support
-    is available 24/7. Phone lines are open during normal business hours. -->
-
     <!-- <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
