--- a/index.html
+++ b/index.html
@@ -32,21 +32,37 @@
         <h1>FAQ</h1>
         <ul>
           <li>
-            <p class="question">How many team members can I invite?</p>
+            <p class="question">
+              How many team members can I invite?
+              <span class="down-arrow">
+                <img src="./images/icon-arrow-down.svg" alt="" />
+              </span>
+            </p>
             <p class="answer">
               You can invite up to 2 additional users on the Free plan. There is
               no limit on team members for the Premium plan.
             </p>
           </li>
           <li>
-            <p class="question">What is the maximum file upload size?</p>
+            <p class="question">
+              What is the maximum file upload size?
+              <span class="down-arrow">
+                <img src="./images/icon-arrow-down.svg" alt="" />
+              </span>
+            </p>
             <p class="answer">
               No more than 2GB. All files in your account must fit your allotted
               storage space.
             </p>
           </li>
           <li>
-            <p class="question">How do I reset my password?</p>
+            <p class="question">
+              How do I reset my password?
+              <span class="down-arrow">
+                <img src="./images/icon-arrow-down.svg" alt="" />
+              </span>
+            </p>
+
             <p class="answer">
               Click “Forgot password” from the login page or “Change password”
               from your profile page. A reset link will be emailed to you.
@@ -54,7 +70,12 @@
           </li>
 
           <li>
-            <p class="question">Can I cancel my subscription?</p>
+            <p class="question">
+              Can I cancel my subscription?
+              <span class="down-arrow">
+                <img src="./images/icon-arrow-down.svg" alt="" />
+              </span>
+            </p>
             <p class="answer">
               Yes! Send us a message and we’ll process your request no questions
               asked.
@@ -62,7 +83,12 @@
           </li>
 
           <li>
-            <p class="question">Do you provide additional support?</p>
+            <p class="question">
+              Do you provide additional support?
+              <span class="down-arrow">
+                <img src="./images/icon-arrow-down.svg" alt="" />
+              </span>
+            </p>
             <p class="answer">
               Chat and email support is available 24/7. Phone lines are open
               during normal business hours.
@@ -75,5 +101,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </footer> -->
+
+    <script src="script.js"></script>
   </body>
 </html>
